--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -5,10 +5,14 @@ require-dbt-version: [">=1.3.0", "<2.0.0"]
 models:
   sage_intacct:
     +materialized: table
-    +schema: sage_intacct
+    +schema: sage
     intermediate:
       +materialized: view
+  sage_intacct_source:
+    +schema: sage_staging
 vars:
+  sage_intacct_database: havenpark
+  sage_intacct_schema: sage
   sage_account_pass_through_columns: []
   sage_gl_pass_through_columns: []
   sage_intacct:
